--- a/blogpost.html
+++ b/blogpost.html
@@ -1,11 +1,12 @@
 <html>
     <head>
-        <title>Bienvenido a hyperblog 2.0</title>
+        <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
-    </head>
+    <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
@@ -13,8 +14,8 @@
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-                <p>¡Suscribete y dale like!</p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
-    </body>
+    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'61e533b4f88dd7f5',m:'be04c63b2726ddafab550b8c9a4f60ec8b04d22f-1612785750-1800-AaNDQFTSzmZQyCNwnqNdDnN6KnEVXxscnTJjWJKWO4PM6DA8xqYMKt2bylMza4b5j+k9jsWCQZ0liDkyc7Id6q7vJKhZdNDzaf3hB+Y0UM4FMsQhBRoF4JaKkRaEtBYhrlCVavv6HIi3JUolJ/CvJqW7UPA+NO0uCyxITJtQOeFF4BZz0m01o46/VCd/JORoCzUrD4Pz/E7RbbmpTm4O8ZehnzTWLhkd1jNnIa2oXbRlFvBre5x3OdKKY2dbzqV+oA==',s:[0xa3e2980bf1,0x4e1004dcd1],}})();</script></body>
 </html>
