--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a Hyperblog 2.0</title>
+        <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
     <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
     <body>
@@ -8,17 +8,17 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
-                <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
-            </div id="footer">
-                Hecho con amor en Platzi &lt;3
-            </div>
+	    <div id="footer">
+		Hecho con amor en Platzi &lt;3
+	    </div>
         </div>
-    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'61e533b4f88dd7f5',m:'be04c63b2726ddafab550b8c9a4f60ec8b04d22f-1612785750-1800-AaNDQFTSzmZQyCNwnqNdDnN6KnEVXxscnTJjWJKWO4PM6DA8xqYMKt2bylMza4b5j+k9jsWCQZ0liDkyc7Id6q7vJKhZdNDzaf3hB+Y0UM4FMsQhBRoF4JaKkRaEtBYhrlCVavv6HIi3JUolJ/CvJqW7UPA+NO0uCyxITJtQOeFF4BZz0m01o46/VCd/JORoCzUrD4Pz/E7RbbmpTm4O8ZehnzTWLhkd1jNnIa2oXbRlFvBre5x3OdKKY2dbzqV+oA==',s:[0xa3e2980bf1,0x4e1004dcd1],}})();</script></body>
+    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'61e7d2f54e9d6837',m:'81399725955e0c94af70e374390d3680df9a4a54-1612813244-1800-ATDPu1qW7QXx7YUW1UOWZqYE/bgdWezmLv2OpVHXiW9txtMw2tCL2I3szCiTtGdPXT5o/w39qFVNX1Heps0gaW5Qv9ssVXP4KP7QjA9Y5NFcyPdUWHiHLrdwEy16h4g/zvMTeVuq1qE2DUA55SjhlMwHxVziGW5bq0mfedPNqLc9pC2rWI0neasOl3v63PQfJVo6KTUQByUsthXvxZuzYq54ZG/UMO0P5dsQMQ5pP9gecMmpiCyd1kmeNdVx82e4Cg==',s:[0xc9a25acd4e,0xc1dded2b09],}})();</script></body>
 </html>
